shopingkart/src/objects/STYLE__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>STYLE</relationshipLabel>
        <relationshipName>STYLE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Tommyhilfiger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tedbaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reiss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RalphLauren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paulsmith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Levis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hackett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>redperry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bluemint</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Budjet__c</fullName>
        <label>Budjet</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>i will pay for quality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <picklist>
            <picklistValues>
                <fullName>Neutral5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blues5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastel5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dimensions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimensions</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Size__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Size__c</referenceTo>
        <relationshipLabel>STYLE</relationshipLabel>
        <relationshipName>STYLE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FavShirt__c</fullName>
        <label>favourite shirt style</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferrence__c</fullName>
        <label>PreferrenceBox</label>
        <picklist>
            <picklistValues>
                <fullName>Whole Outfit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scarf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blazer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knitwear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trouser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tshirt/Polo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shirt</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TrouserFit__c</fullName>
        <label>Trouser_Fit</label>
        <picklist>
            <picklistValues>
                <fullName>Relaxed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slim</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WorkStyle__c</fullName>
        <label>WorkStyle</label>
        <picklist>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uniform</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>preferred_fit__c</fullName>
        <label>preferred fit</label>
        <picklist>
            <picklistValues>
                <fullName>Slim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Slim</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>regularstyle__c</fullName>
        <label>style</label>
        <picklist>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trendy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preppy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>STYLE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>STYLE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STYLE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>